--- a/map/WebContent/css/styles.css
+++ b/map/WebContent/css/styles.css
@@ -13,12 +13,12 @@ body {
 	margin:25px;
 }
 
-#filter {
+.filter {
 	width: 100%;
 	margin-bottom: 5px;
 }
 
-#loclist {
+.loclist {
 	overflow-y: auto;
 	max-height: 360px;	
 }
@@ -31,7 +31,7 @@ body {
 	color: red;
 }
 
-#map {
+.map {
 	height: 400px;
 	color: black;
 }
